syntax = "proto3";

package ping;

service Ping {
  rpc GetPing(PingReq) returns (PingResp) {}
  rpc StreamPing(PingReq) returns (stream PingResp) {}
}

message PingReq {
   string request = 1;

}
message PingResp {
  string response = 1;
}

